added info on contact page, added data validation backend for contact form, changed contact route and blog post route

--- a/views/Blog-post.ejs
+++ b/views/Blog-post.ejs
@@ -1,7 +1,7 @@
 <% include partials/head %>
 
 <div class="container-fluid"> 
-    <form id="blog-form" method="POST" action="/api/post/blog" class="login-form blog-form col-6 offset-3">
+    <form id="blog-form" method="POST" action="/api/blog/" class="login-form blog-form col-6 offset-3">
         <h1 class="form-title">Rédiger un post de blog</h1>
             
         <div class="txtb">
