--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -1,10 +1,12 @@
 <% include partials/head %>
 
 <div class="container-fluid"> 
-    <div class="login-form contact-form">
-        <form id="contact-form" method="POST" action="/api/post/contact">
+    <div class="login-form contact-form col-6">
+        <form id="contact-form" method="POST" action="/api/contact/" >
             <h1 class="form-title">Nous contacter</h1>
-            
+            <div class="bottom-text">
+                Nous avons besoin de votre email pour pouvoir vous répondre, et le nom d'utilisateur est à titre indicatif
+            </div>
             <div class="txtb">
                 <input type="text" name="name" id="name" onkeyup="Validate.Username(this);"  value="<% if (locals.name) { %><%= locals.name %><% } %>">
                 <span data-placeholder="Username"></span>
@@ -19,15 +21,18 @@
             
             <div class="txtb">
                 <input type="text" name="title" id="title">
-                <span data-placeholder="Mail object"></span>
+                <span data-placeholder="Mail Title"></span>
                 <span id="i_title" class="form-info">Title must contain between 4 and 30 characters</span>
             </div>
 
             <textarea id="blog-textarea" name="content" placeholder="Whatever you wish to tell us..." required></textarea>
             
             <input type="submit" class="logbtn" value="Envoyer" id="submit-contact">
-            
         </form>
+        <hr />
+        <div class="bottom-text mt-4">
+            Sinon, vous pouvez nous envoyer un mail directement à l'adresse <b>mailmaral@gmail.com</b>
+        </div>
     </div>
     <script src="/scripts/formFocus.js"></script>
     <script src="/scripts/frontValidation.js"></script>
