--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -16,7 +16,8 @@
 
       <input type="submit" class="logbtn" value="Connexion" id="submit-login">
 
-      <div class="bottom-text">
+      <hr />
+      <div class="bottom-text mt-4">
         Pas encore de compte? Créez en un <a href="/Register">ici</a>
       </div>
     </form>
