--- a/views/Register.ejs
+++ b/views/Register.ejs
@@ -31,7 +31,8 @@
 
         <input type="submit" class="logbtn" value="S'inscrire" id="submit-register">
 
-        <div class="bottom-text">
+        <hr />
+        <div class="bottom-text mt-4">
             Vous possédez déjà un compte? Connectez-vous ici <a href="/Login">ici</a>
         </div>
 
