--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -29,6 +29,9 @@
       <% }) %>
     <% } %>
   </div>
+  <div class="col-6 offset-3 mb-3">
+      <input type="submit" class="logbtn" value="Load more" onclick="infiniteScroll();">
+  </div>
 </div>
   
 <% include partials/footer %>
