--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -31,7 +31,7 @@
         </form>
         <hr />
         <div class="bottom-text mt-4">
-            Sinon, vous pouvez nous envoyer un mail directement à l'adresse <b>mailmaral@gmail.com</b>
+            Sinon, vous pouvez nous envoyer un mail directement à l'adresse <b>Maral.canvas@gmail.com</b>
         </div>
     </div>
     <script src="/scripts/formFocus.js"></script>
