--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Home</title>
+    <title><%= (locals.active) ? locals.active : '' %></title>
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
@@ -21,14 +21,14 @@
                 <a href="/"><h1 class="name-header navbar-text">Maral</h1></a>
             </div>
                 <ul class="nav-links">
-                    <li><a href="/Bio" class="navbar-text">Biographie</a></li>
-                    <li><a href="/Galerie" class="navbar-text">Galerie</a></li>
-                    <li><a href="/Shop" class="navbar-text">Boutique</a></li>
-                    <li><a href="/Contact" class="navbar-text">Contact</a></li>
-                    <li><a href="/Blog" class="navbar-text">Blog</a></li>
+                    <li><a href="/Bio" class="navbar-text <%= (locals.active && locals.active == 'Biographie') ? 'active' : '' %>">Biographie</a></li>
+                    <li><a href="/Galerie" class="navbar-text <%= (locals.active && locals.active == 'Galerie') ? 'active' : '' %>">Galerie</a></li>
+                    <li><a href="/Shop" class="navbar-text <%= (locals.active && locals.active == 'Shop') ? 'active' : '' %>">Boutique</a></li>
+                    <li><a href="/Contact" class="navbar-text <%= (locals.active && locals.active == 'Contact') ? 'active' : '' %>">Contact</a></li>
+                    <li><a href="/Blog" class="navbar-text <%= (locals.active && locals.active == 'Blog') ? 'active' : '' %>">Blog</a></li>
                     <% if (!locals.name) { %>
-                        <li><a href="/Register" class="navbar-text">S'inscrire</a></li>
-                        <li><a href="/Login" class="navbar-text">Connexion</a></li>
+                        <li><a href="/Register" class="navbar-text <%= (locals.active && locals.active == 'Register') ? 'active' : '' %>">S'inscrire</a></li>
+                        <li><a href="/Login" class="navbar-text <%= (locals.active && locals.active == 'Login') ? 'active' : '' %>">Connexion</a></li>
                     
                     <% } else { %>
                         <li><a href="/User" class="navbar-text"><%= locals.name %></a></li>
