enhanced security for blog post routes, added bio page, added mail confirmation when registering, require acc to be confirmed to log in, else resend mail token

--- a/public/style.css
+++ b/public/style.css
@@ -425,3 +425,11 @@ transform: translate(50%, 50%);
   top: 40%;*/
   transform: translate(0%, 0%);
 }
+
+/* BIO */
+
+.container-bio {
+  display: block;
+}
+
+/* END BIO */
