--- a/views/Gallery-post.ejs
+++ b/views/Gallery-post.ejs
@@ -3,7 +3,7 @@
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
 <div class="container-fluid"> 
-    <form id="gallery-form" method="POST" action="/api/gallery/" class="login-form blog-form col-6 offset-3" onsubmit="trigger(event);">
+    <form id="gallery-form" method="POST" action="/api/gallery/" class="login-form blog-form col-6 offset-3" enctype="multipart/form-data" onsubmit="trigger(event);">
         <h1 class="form-title">Ajouter un item à la gallerie</h1>
             
         <div class="txtb">
@@ -12,12 +12,16 @@
         </div>
 
         <textarea class="blog-textarea" id="content" name="content" placeholder="Item description.." required></textarea>
+       
+        <div class="form-group">
+            <input type="file" name="img" id="img">
+        </div>
 
         <div class="form-group">
-            <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
-            <span data-placeholder="Tags"></span>
+                <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
+                <span data-placeholder="Tags"></span>
         </div>
-    
+
         <input type="submit" class="logbtn" value="Sauvegarder" id="submit-gallery">
     </form>
     
@@ -27,19 +31,23 @@
         let tagInput = document.getElementsByClassName("label-info"),
             title = $("#title").val(),
             content = $("#content").val(),
+            img = document.querySelector('#img'),
+            formData = new FormData(),
             tags = [];
+        
         for (i = 0; i < tagInput.length; i++)
             tags.push(tagInput[i].textContent);
-        console.log({title, content, tags})
+
+        formData.append('img', img.files[0]);
+        formData.append('title', title);
+        formData.append('content', content);
+        formData.append('tags', JSON.stringify(tags));
+        
         const response = await fetch('/api/gallery/', {
             method: 'post',
             mode: 'same-origin',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({
-                title: title, content: content, tags: tags
-            })
+            body: formData
         })
-        console.log(response)
         window.location.href = response.url;
     }
     </script>
