--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small blue pt-3">
+<footer class="page-footer font-small blue pt-3 mt-3">
         <div class="container-fluid text-center text-md-left">
           <div class="row">
             <hr class="clearfix w-100 d-md-none pb-3">
