--- a/views/Blog-post.ejs
+++ b/views/Blog-post.ejs
@@ -9,7 +9,7 @@
             <span data-placeholder="Titre"></span>
         </div>
 
-        <textarea id="blog-textarea" name="content" placeholder="Your blog content here" required></textarea>
+        <textarea id="blog-textarea" class="blog-textarea" name="content" placeholder="Your blog content here" required></textarea>
     
         <input type="submit" class="logbtn" value="Sauvegarder" id="submit-blog">
     
