--- a/views/Blog-patch.ejs
+++ b/views/Blog-patch.ejs
@@ -8,7 +8,7 @@
                 <input type="text" name="title" value="<%= locals.blogContent.title %>" required>
                 <span data-placeholder="Titre"></span>
             </div>
-            <textarea id="blog-textarea" name="content" placeholder="Your blog content here" required><%= locals.blogContent.content %></textarea>
+            <textarea id="blog-textarea" class="blog-textarea" name="content" placeholder="Your blog content here" required><%= locals.blogContent.content %></textarea>
 
             <input type="submit" class="logbtn" value="Modifier" id="patch-blog">
         </form>
