--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -1,35 +1,28 @@
 <% include partials/head %>
 
 <div class="container-fluid">
+    <% if (locals.level && locals.level > 1) { %>
+      <div class="alert alert-info" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <a href="/Galerie/Post">post gallery item</a>
+      </div>
+    <% } %>
     <div class="container">
-        <div class="card" style="width: 18rem;">
-            <img src="img/dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title"><i>Oeil de dieu</i></h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Oeil de dieu</h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Oeil de dieu</h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="img/dieu.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Oeil de dieu</h5>
-              <p class="card-text"><a href="#">#bleu</a> </p>
-            </div>
-          </div>
+          <% if(locals.galleries){ %>
+            <% Object.keys(locals.galleries).forEach(function (index) { %>
+              <div class="card" style="width: 18rem;">
+                <img src="/api/gallery/image/<%= locals.galleries[index]._id %>" class="card-img-top" alt="<%= locals.galleries[index].title %>">
+                <div class="card-body">
+                  <h5 class="card-title"><i><%= locals.galleries[index].title %></i></h5>
+                  <a href="/Galerie/Patch/<%= locals.galleries[index]._id %>"><i class="fas fa-edit"></i></a>
+                  <p class="card-text gallery-description"><%= locals.galleries[index].content %></p>
+                  <p class="card-text"><a href="#">#bleu</a> </p><!-- foreach <%= locals.galleries[index].tags %> tags -->
+                </div>
+              </div>
+            <% }) %>
+          <% } %>
     </div>
 </div>
 <% include partials/footer %>
