--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid"> 
     <div class="container">
-        
+            <h1>KEEP SHOP API AND FRONT FOR LATER</h1>
     </div>
 </div>
   
