--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <div class="container-fluid"> 
     <form id="blog-form" method="POST" action="/api/blog/" class="login-form blog-form col-6 offset-3">
@@ -18,4 +18,4 @@
     <script src="/scripts/formFocus.js"></script>
 </div>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
