--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
@@ -48,10 +48,10 @@
             mode: 'same-origin',
             body: formData
         })
-        window.location.href = response.url;
+        window.location.href = "/Galerie";
     }
     </script>
     <script src="/scripts/formFocus.js"></script>
 </div>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
