--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -1,4 +1,4 @@
-<% include partials/head %>
+<% include ../partials/head %>
 
 <div class="container-fluid">
     <div class="login-form blog-form col-6 offset-3">
@@ -20,4 +20,4 @@
     <script src="/scripts/formFocus.js"></script>
 </div>
   
-<% include partials/footer %>
+<% include ../partials/footer %>
