--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -7,10 +7,12 @@
         <form id="blog-form" method="POST" action="/api/gallery/patch/<%= locals._id %>" enctype="multipart/form-data" onsubmit="trigger(event);"> 
             <h1 class="form-title">Editer un item de la gallerie</h1>
             <div class="txtb">
-                <input type="text" name="title" id="title" value="<%= locals.title %>" required>
-                <span data-placeholder="Titre"></span>
+                <input type="text" name="title" id="title" value="<%= locals.title %>" onkeyup="Validate.String(this, 1, 256);" required>
+                <span data-placeholder="Title"></span>
+                <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
-            <textarea id="content" name="content" class="blog-textarea" placeholder="Your blog content here" required><%= locals.content %></textarea>
+            <textarea id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.content %></textarea>
+            <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
 
             <div class="form-group">
                 <img src="/api/gallery/image/<%= locals._id %>"/>
@@ -22,11 +24,11 @@
                 <span data-placeholder="Tags"></span>
             </div>
 
-            <input type="submit" class="logbtn" value="Modifier" id="patch-blog">
+            <input type="submit" class="logbtn" value="Update" id="patch-blog">
         </form>
     <hr />
     <form method="GET" action="/api/gallery/delete/<%= locals._id %>">
-        <input type="submit" class="delbtn" value="SUPPRIMER" id="delete-blog">
+        <input type="submit" class="delbtn" value="DELETE" id="delete-blog">
     </form>
 </div>
 <script>
@@ -65,6 +67,7 @@
             window.location.href = "/Galerie";
         }
         </script>
+    <script src="/scripts/frontValidation.js"></script>
     <script src="/scripts/formFocus.js"></script>
 </div>
   
